--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section id="login">
-        <h2>Portail tamer</h2>
+        <h2>Portail pour voir</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="username">Nom d'utilisateur :</label>
