--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portail Entreprise</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="assets/js/auth.js" defer></script>
+    <!-- <script src="assets/js/auth.js" defer></script> -->
 </head>
 <body>
     <header class="header">
@@ -117,6 +117,6 @@
             </div>
         </section>                 
     </main>
-    <script src="assets/js/script.js"></script>
+    <!-- <script src="assets/js/script.js"></script> -->
 </body>
 </html>
