--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Portail ta mere</h1>
+        <h1>Portail entreprise</h1>
     </header>
     <nav class="navbar">
         <ul>
